--- a/TanPhuocVinh/TanPhuocVinh/ClientApp/src/assets/css/main.css
+++ b/TanPhuocVinh/TanPhuocVinh/ClientApp/src/assets/css/main.css
@@ -68,7 +68,28 @@ body {
 }
 
 .functions .ant-card-meta-title {
-  text-transform: uppercase;
-  color: #5f6366;
+  text-transform: capitalize;
+  color: rgba(0, 0, 0, 0.85);
   font-weight: 600;
+  font-size: 16px;
+}
+.contact-form {
+  padding: 4em;
+}
+.contact-form .card {
+  padding: 2em 3em;
+  margin: auto;
+  width: fit-content;
+  background: #fff;
+  box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.contact-form .form h2 {
+  font-family: "Varela Round", sans-serif;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+  color: #5f6366;
+  margin-top: 1em;
 }
